sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:7: error: Invalid literal number
  et i, puis i-2ecart et i-ecart, puis i-3ecart et i-2ecart, etc.
               ^AlgShellSort:7: error: Invalid literal number
  et i, puis i-2ecart et i-ecart, puis i-3ecart et i-2ecart, etc.
                                         ^AlgShellSort:7: error: Invalid literal number
  et i, puis i-2ecart et i-ecart, puis i-3ecart et i-2ecart, etc.
                                                     ^AlgShellSort:7: error: ';' expected but ',' found.
  et i, puis i-2ecart et i-ecart, puis i-3ecart et i-2ecart, etc.
      ^AlgShellSort:27: error: Unmatched closing brace '}' ignored here
}
^