sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {

	ecart=getNombreValeur()/2
while(ecart>0)
  appliquer l'algorithme de tri par insertion en comparant i-ecart
  et i, puis i-2ecart et i-ecart, puis i-3ecart et i-2ecart, etc.

 	for (i <- 1 to getNombreValeurs()-1)
 	{ 
      var j=i;
      var valeur =getValeur(i)
      while (j>=i && getValeur(j-i)>getValeur(i))
      { 
        setValeur(j,getValeur(j-1))
        j=j-i
      }
     setValeur(j,valeur);
    }
  }

  
}
